# HipKittens

./: .gitmodules  README.md  requirements.txt
analysis/attn/: README.md  mi355x_data_to_log.json  plot.py
analysis/attn/fwd/: plot.py  plot_d64.py
analysis/attn/fwd/mi350x/: causal_gqa_kernel_16384.cpp  causal_mha_kernel_16384.cpp  gqa_kernel_16384.cpp  mha_kernel_16384.cpp  mi355x_gqa_causal_fwd.json  mi355x_gqa_non_causal_fwd.json  mi355x_mha_causal_fwd.json  mi355x_mha_non_causal_fwd.json  test_python.py
analysis/baselines/: README.md
analysis/baselines/attn/: attn_bwd_baselines.py  attn_fwd_baselines.py
analysis/bf16_gemm/: plot.py
analysis/bf16_gemm/mi350x/: kernel_16384.cpp  kernel_4096.cpp  kernel_8192.cpp  mi355x_bf16_gemm.json  test_python.py
analysis/fp6_gemm/: plot.py
analysis/fp8_gemm/: plot.py
analysis/gemm/: plot.py
analysis/gemm/mi350x/fp8/: FP8GemmPerfComparison.csv
analysis/rotary/: plot.py
analysis/rotary/mi350x/: benchmark.sh  mi355x_rotary.json  test_python.py
include/common/: base_types.cuh  util.cuh
include/ops/group/memory/tile/: global_to_shared.cuh
include/ops/warp/: warp.cuh
include/ops/warp/memory/tile/: global_to_register.cuh  global_to_shared.cuh  shared_to_register.cuh  tile.cuh
include/ops/warp/memory/util/: util.cuh
include/ops/warp/memory/vec/: global_to_register.cuh  shared_to_register.cuh
include/ops/warp/register/tile/: conversions.cuh  mma.cuh  reductions.cuh  tile.cuh
include/ops/warp/register/vec/: vec.cuh
include/types/: types.cuh
include/types/global/: gl.cuh
include/types/register/: register.cuh  rt.cuh  rt_base.cuh  rt_layout.cuh  rt_shape.cuh  rv.cuh  rv_layout.cuh
include/types/shared/: shared.cuh  st.cuh  st_matrix.cuh
kernels/HIP/gemm/fp16fp32/: README.md
kernels/TK/attn/: README.md  benchmark.sh  simple-kernel.cpp
kernels/TK/attn/BHND/mi325x/: Makefile  kernel.cpp  shared-kernel.cpp  simple-kernel.cpp  test_python.py
kernels/TK/attn/BHND/mi350x/: Makefile  kernel-v1.cpp  reg-kernel-v2.cpp  reg-kernel.cpp  shared-kernel-v2.cpp  shared-kernel-v3.cpp  shared-kernel-v4.cpp  shared-kernel.cpp  test_python.py  utils.cpp
kernels/TK/attn/BNHD/mi350x/: Makefile  README.md  simple-kernel.cpp  test_python.py  utils.cpp
kernels/TK/attn/gqa/: kernel.cpp
kernels/TK/attn/gqa_backwards/: GQA_bkwd_4warps_port_v0.cpp  GQA_bkwd_fp32.cpp  GQA_bkwd_v2.cpp  Makefile  benchmark.sh  debug_nans.py  test_attn_fp32.py
kernels/TK/attn/gqa_backwards/MHA/: benchmark.sh
kernels/TK/attn/gqa_backwards/archive/: GQA_bkwd_4warps.cpp  GQA_bkwd_8warps.cpp  GQA_bkwd_asm.cpp  GQA_bkwd_asm_interleaved.cpp  GQA_fwd.cpp  Makefile  test_attn.py
kernels/TK/attn/gqa_causal/: Makefile  kernel_01.cpp  kernel_02.cpp  kernel_03.cpp  test_python.py
kernels/TK/attn/gqa_causal_backwards/: Makefile  test_attn.py
kernels/TK/attn/mi350x/: Makefile  reg-kernel-v2.cpp
kernels/TK/baselines/: README.md
kernels/TK/baselines/gemm/: triton_gemm_v01.py  triton_gemm_v02.py  triton_gemm_v03.py
kernels/TK/gemm/fp6fp32/: kernel.cpp  test_python.py
kernels/TK/micro/: micro_02_2stage_syncthreads.cpp  micro_03_3stage_sharedatomics.cpp  micro_03_3stage_syncthreads.cpp  micro_04_2stage_16wave.cpp
kernels/TK/micro/producer_consumer/: Makefile  README.md  micro_02_2stage_8c4p.cpp  micro_02_2stage_8c4p_async.cpp  micro_03_3stage_8c4p.cpp  micro_03_3stage_8c4p_async.cpp  micro_04_2stage_12c4p.cpp  micro_05_2stage_16c2p.cpp  micro_06_2stage_8c4p_64x96.cpp  micro_06_2stage_8c4p_96x64.cpp  micro_07_2stage_8c4p_nblock8.cpp  micro_08_2stage_4c4p.cpp  micro_08_4stage_4c4p.cpp  test_gemm.py
kernels/attn/fa4_experiment/: kernel.cpp  kernel_v02.cpp
kernels/attn/gqa/: kernel.cpp  kernel_d64.cpp
kernels/attn/gqa_backwards/: Makefile  README.md  attn_bkwd_non_causal.cpp  attn_fwd_non_causal.cpp
kernels/attn/gqa_causal/: kernel.cpp  kernel_d64.cpp
kernels/attn/gqa_causal_backwards/: Makefile  README.md  attn_bkwd_causal.cpp  attn_fwd_causal.cpp
kernels/dist-gemm/bf16fp32/mi350x/micros/producer_consumer/16x32/: CMakeLists.txt  README.md  example.py  iris_py.cpp  micro_02_2stage_8c4p.cpp
kernels/gemm/bf16fp32/: 256_256_64_32_with16x32.cpp  256_256_64_32_with32x16.cpp  Makefile  README.md  bench.py  test.py  utils.py
kernels/gemm/bf16fp32/archive/: utils.cpp
kernels/gemm/bf16fp32/mi350x/: test_python.py
kernels/gemm/fp8fp32/FP8_4wave/: 4_wave.cu
kernels/matmul/FP8/: matmul.cu
kernels/matmul/FP8_4wave/: Makefile  matmul_1024.cu  matmul_2048.cu
tests/unit/: Makefile
tests/unit/testing_commons/: testing_commons.cuh  testing_utils.cuh
training/bert/: README.md  tasks.py
training/bert/models/: aiter.py  base.py  hipkittens.py
training/llama/: setup.py
training/llama/llama/models/: block.py  embedding.py  gpt.py  rotary.py
training/llama/llama/ops/: rotary.py
training/llama/train/: README.md
training/llama/train/losses/: cross_entropy.py
training/llama/train/optim/: param_grouping.py
(+259 files in other folders)
